cleaning up test cleanup